objects/Contact_Entitlement__c.object
<CustomObject>
    <fields>
        <fullName>Access_End_Date__c</fullName>
        <label>Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Start_Date__c</fullName>
        <label>Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <formula>Asset__r.LCRM_Asset_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>ODT_Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Source_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Source System</label>
        <referenceTo>LCRM_Contact_SSD__c</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>ODT_Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasNoEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasNoEndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_days_to_extend__c</fullName>
        <label>No of days to extend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_times__c</fullName>
        <label>No of times extended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Domain__c</fullName>
        <formula>Asset__r.Product2.LCRM_Product_Domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Title__c</fullName>
        <formula>Asset__r.Product2.DC_Product_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_UserID__c</fullName>
        <label>Product UserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Changed_History__c</fullName>
        <label>Trial Changed History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_GUID__c</fullName>
        <label>Trial GUID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <formula>Asset__r.Trial_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Original_End_Date__c</fullName>
        <label>Trial Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Status__c</fullName>
        <label>Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial Initiated</fullName>
                </value>
                <value>
                    <fullName>Trial Started</fullName>
                </value>
                <value>
                    <fullName>Trial Expired</fullName>
                </value>
                <value>
                    <fullName>Trial Extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Have a lookup on SSD object of Contact using Contact and get contact SFDC ID.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>ODT_Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Entitlement</label>
    <nameField>
        <label>Contact Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>